@@ -3,6 +3,8 @@ CHANGES-1.4.txt
 
 CHANGES IN CUPS V1.4.4
 
+	- The lppasswd command did not use localized password prompts
+	  (STR #3492)
 	- The socket backend no longer waits for back-channel data on platforms
 	  other than Mac OS X (STR #3495)
 	- The scheduler didn't send events when a printer started accepting or
